[gd_scene load_steps=2 format=3 uid="uid://ciuvi7tl2l5wv"]

[ext_resource type="Script" uid="uid://devlsdpi63sk1" path="res://scripts/game_menu.gd" id="1_qdaa4"]

[node name="GameMenu" type="VBoxContainer"]
offset_right = 96.0
offset_bottom = 171.0
script = ExtResource("1_qdaa4")

[node name="ResumeButton" type="Button" parent="."]
process_mode = 3
layout_mode = 2
text = "Resume"

[node name="RestartButton" type="Button" parent="."]
process_mode = 3
layout_mode = 2
text = "Restart"

[node name="RetryButton" type="Button" parent="."]
process_mode = 3
layout_mode = 2
text = "Retry"

[node name="MainMenuButton" type="Button" parent="."]
process_mode = 3
layout_mode = 2
text = "Main Menu"

[node name="QuitButton" type="Button" parent="."]
process_mode = 3
layout_mode = 2
text = "Quit Game"

[connection signal="pressed" from="ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
